[package]
name = "scheduler_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
tracing = "^0.1"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2"
